--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,7 @@
+body {
+	background-color:beige;
+}
+
 h1, h2 {
 	color:blue;
 }
@@ -6,6 +10,7 @@ h1 {
 	text-decoration:underline;
 	text-transform:uppercase;
 	text-align:center;
+	border:4px solid blue;
 }
 
 img {
