--- a/homepage.css
+++ b/homepage.css
@@ -3,14 +3,18 @@ body {
 }
 
 h1, h2 {
-	color:blue;
+	color:black;
 }
 
 h1 {
-	text-decoration:underline;
 	text-transform:uppercase;
 	text-align:center;
-	border:4px solid blue;
+	border:4px solid black;
+	background-color:lightblue;
+}
+
+h2 {
+	text-decoration:underline;
 }
 
 img {
