--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,6 +2,10 @@ body {
 	background-color:beige;
 }
 
+section {
+
+}
+
 h1, h2 {
 	color:black;
 }
@@ -18,14 +22,22 @@ h2 {
 }
 
 img {
-	box-shadow:10px 10px 15px gray;
+	box-shadow:-10px 10px 15px gray;
+	width:100%;
+}
+
+#picture {
+	float:right;
+	width:30%;
 }
 
 .general_content {
-	color:green;
-	margin-left:50px;
+	border:5px solid black;
+	padding:0px 10px;
 }
 
 #biography {
-	
+	float:left;
+	color:darkgreen;
+	width:65%;
 }
